assets/CSS/styles.css
h2 {
  font-family: "Arial Narrow Bold", sans-serif;
  font-weight: bold;
}

h3 {
  font-family: "Arial Narrow Bold", sans-serif;
}

p {
  font-family: "Poiret One", sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 1.25em;
}

.container-fluid {
  padding-top: 2em;
  padding-bottom: 2em;
}

.btn {
  background-color: #580b20;
  border-color: white;
  font-family: "Arial Narrow Bold", sans-serif;
}

.btn:hover {
  background-color: #dc9806;
  border: none;
}


/* Nav Bar  */
.nav-item {
 font-family: "Poiret One", sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 1.25em;
}

.dropdown-item {
  font-weight: 400;
  font-size: 1.25em;
}

.navbar-fixed-top {
  background-color: white;
  padding-bottom: 0;
}

.nav-link {
  color: #000 !important;
  transition: color 0.3s;
}

.nav-link:hover {
  color: #dc9806 !important;
}

.navbar-toggler {
  margin-top: 2em;
}


/* Footer */

/* To make sticky footer */
.wrapper {
  min-height: 100vh;
  display: grid;
  grid-template-rows: auto 1fr auto;
}

.social-icons {
  color: black;
}

.social-icons:hover {
  color: #dc9806 !important;
}

.designLed-copyright {
  color: #000 !important;
}

.designLed-copyright:hover {
  color: #dc9806 !important;
  text-decoration: none;
}


/* Home Page */

.main-title {
  padding-bottom: 1em;
}
.sub-header {
  font-family: "Arial Narrow Bold", sans-serif !important;
  font-size: 2em;
}


/* Coming Soon Section */

.coming-soon {
  background-color: #580b20;
  color: white;
  padding-top: 5em;
  text-align: center;
}


/* Colour Theory Page */

.colours {
  padding: 2rem;
}

.colour-psych-text {
  padding-left: 1em;
  padding-right: 1em;
}

.colour-theory-line {
  padding-top: 2em;
  padding-left: 1em;
  padding-right: 1em;
}

/* Palette Section */

.palette-title {
  text-align: center;
}

.palette-list {
  font-family: "Grandiflora One", cursive;
  font-size: large;
}

.img-responsive {
  max-width: 100%;
  height: auto;
}

.col-xl-6-left {
  margin-right: 90;
}

.how-to {
  background-color: #580b20;
  margin: 1.5em;
  padding: 2em;
  color: white;
  max-width: 98%;
}


/* Contact page */

#contact-form {
  padding-top: 0 !important;
  font-family: "Arial Narrow Bold", sans-serif;
}

.form-group {
  margin-top: 1em;
}

.thank-you {
  text-align: center !important;
}

.submit-button {
  background-color: #580b20;
  color: white;
}


/* 404 page */

.fourzerofour {
  color: #dc9806;
}


/* Media Queries */

@media (min-width: 320px) and (max-width: 480px) {
  .description {
    margin-top: 1em;
  } 
  .social-icons-row {
    width: 60px;
    height: 50px;
  }

  h1 {
    font-size: 1.5em;
  }

  .sub-header {
    font-size: 1em;
  }
}

@media (min-width: 768px) and (max-width: 1024px) {
  
  .menu {
  margin-left: 30%;
}
}

@media (min-width: 2500px) {
  h1 {
    font-size: 4em;
  } 

  h3 {
    font-size: 3em;
  }

  p {
    font-size: 2em;
  }

  li {
    font-size: 2em;
  }
}

  

